docs: polish README racine, netflix-java-2026 et frontend
- README racine : badges, structure, stack, liens articles
- netflix-java-2026 : détail des 3 modules, how-to run, résultats tests
- frontend : rôle, structure, déploiement Vercel